bugfix: text-align

--- a/frontend/src/components/PlanoCard/styles.scss
+++ b/frontend/src/components/PlanoCard/styles.scss
@@ -26,7 +26,7 @@
         width: 24.5rem;
         height: 100%;
         padding-left: 1rem;
-
+        text-align: start;
         .name {
             margin-top: 1rem;
             font-size: 1.2rem;
